# bevy_escape_room

./: .gitignore  Cargo.toml  Makefile.toml  blf.blend  blf.blend1  er.blend  green statue.blend  green statue.blend1  pl.blend
assets/: er.gltf
src/: lib.rs  main.rs
static/: index.html
static/assets/: er.gltf  pl.gltf
